; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_offmap.c_git_offmap_exists.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_offmap.c_git_offmap_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@off = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_offmap_exists(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @off, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @kh_get(i32 %5, i32* %6, i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @kh_end(i32* %9)
  %11 = icmp ne i64 %8, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @kh_get(i32, i32*, i32) #1

declare dso_local i64 @kh_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
